# libasco

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  armv7-shell.nix  docker-script.sh  i386-shell.nix  x86_64-shell.nix
.github/workflows/: build-script.yml
include/asco/: arch-detection.h  asco.h  asco2.h
src/: CMakeLists.txt  aarch64.s  armv7.s  asco.c  gnu-x86_64.s  win-teb-support.h
src/aarch64/: as.s  marmasm.asm
src/armv5/: as.s
src/i386/: gen-arch-spec.sh  source.S  sysv-att.s  sysv-masm.asm  sysv-nasm.asm
src/x86_64/: gen-arch-spec.sh  source.S  sysv-att.s  sysv-nasm.asm  win64-att.s  win64-masm.asm  win64-nasm.asm
tests/: CMakeLists.txt  test-asco.c
